# auto-using-crewAI-with-Ray-framework

./: README.md  benchmark_results_20241202-062331.csv  benchmark_results_20241202-210030.csv  benchmark_results_20241202-222830.csv  pyproject.toml
benchmark_results/: benchmark-analysis.py
src/auto/: __init__.py  app.py  benchmark.py  crew.py  main.py  ray_executor.py
src/auto/utils/: metrics.py
tests/: test.py
