[tool.poetry]
name = "auto"
version = "0.1.0"
description = "auto using crewAI with Ray framework"
authors = ["Fei Fang <ffang6@ucsc.edu>"]
packages = [
    { include = "auto", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
crewai = { extras = ["tools"], version = ">=0.83.0,<1.0.0" }
ray = { extras = ["default", "serve"], version = "^2.9.0" }
pandas = "^2.2.0"
numpy = "^1.26.0"
matplotlib = "^3.8.0"
langchain-openai = "^0.2.10"

[tool.poetry.scripts]
auto = "auto.main:run"
benchmark = "auto.benchmark:run"
train = "auto.main:train"
test = "auto.main:test"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"